adds about and contact templates

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,41 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h3 class="card-title"><strong>About Us</strong></h3>
+        <h6 class="card-subtitle">
+            At Best Cars, we believe buying a car should be as exciting as driving one. 
+            Whether you're searching for your first car or upgrading to your dream ride, 
+            our team is here to help you find the perfect match.
+        </h6>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/sofia-ramirez.jpg" alt="Sofía Ramirez profile photo">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Sofia Ramirez</p>
+          <p>Sales representative</p>
+          <p class="card-text"><i>Helping customers find the car that fits their life since day one.</i></p>
+          <p>sofia.ramirez@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/emma-carter.png" alt="Emma Carter profile photo">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Emma Carter</p>
+          <p>Test drive coordinator</p>
+          <p class="card-text"><i>Making every test drive feel like the start of a new adventure.</i></p>
+          <p>emma.carter@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/james-thompson.png" alt="James Thompson profile photo">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">James Thompson</p>
+          <p>Head mechanic</p>
+          <p class="card-text"><i>Keeping every car on the lot running like new.</i></p>
+          <p>james.thompson@bestcars.com</p>
         </div>
       </div>
     </div>
